--- a/css/styles.css
+++ b/css/styles.css
@@ -75,17 +75,21 @@ address {
   font-weight: 700;
   font-size: 56px;
   line-height: 107%;
+  letter-spacing: 0.02em;
   color: #fff;
 }
 
 .hero-button {
   text-align: center;
   font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
 }
 
-.hero-button:hover {
+.hero-button:hover,
+.hero-button:focus {
   cursor: pointer;
   background-color: #404bbf;
 }
