add classes for headings and paragraphs inside list items of the our feature list

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,10 +96,11 @@ address {
 /* #endregion */
 
 /* #region Our features */
-.list-item-title {
+.features-item-title {
   font-weight: 500;
   font-size: 20px;
-  line-height: 120%;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 /* #endregion */
 
