--- a/css/styles.css
+++ b/css/styles.css
@@ -123,12 +123,14 @@ address {
 
 .team-list-item {
   text-align: center;
+  background-color: #fff;
 }
 
 .team-item-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
+  letter-spacing: 0.02em;
 }
 
 .team-item-position {
