--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ address {
   font-weight: 700;
   font-size: 36px;
   line-height: 111%;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
 }
