--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ address {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
+  letter-spacing: 0.02em;
 }
 
 .portfolio-item-category {
